--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,30 +1,22 @@
 {
-  "manifest_version": 3,
-  "name": "Chrome Extension with React & Webpack",
-  "options_page": "options.html",
-  "background": { "service_worker": "background.bundle.js" },
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": "icon-34.png"
-  },
-  "chrome_url_overrides": {
-    "newtab": "newtab.html"
-  },
-  "icons": {
-    "128": "icon-128.png"
+  "background": {
+    "scripts": [
+      "background/index.ts"
+    ]
   },
   "content_scripts": [
     {
-      "matches": ["http://*/*", "https://*/*", "<all_urls>"],
-      "js": ["contentScript.bundle.js"],
-      "css": ["content.styles.css"]
+      "js": [
+        "content/index.ts"
+      ],
+      "matches": [
+        "https://*/*",
+        "http://*/*"
+      ]
     }
   ],
-  "devtools_page": "devtools.html",
-  "web_accessible_resources": [
-    {
-      "resources": ["content.styles.css", "icon-128.png", "icon-34.png"],
-      "matches": []
-    }
-  ]
+  "browser_action": {
+    "default_popup": "pages/popup/index.html"
+  },
+  "name": "quil-autoanswer-hack"
 }
