--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,13 +10,12 @@
         "content/index.ts"
       ],
       "matches": [
-        "https://*/*",
-        "http://*/*"
+        "https://quill.org"
       ]
     }
   ],
   "browser_action": {
     "default_popup": "pages/popup/index.html"
   },
-  "name": "quil-autoanswer-hack"
+  "name": "Quill Autoanswer Hack"
 }
