--- a/manifest.json
+++ b/manifest.json
@@ -11,8 +11,7 @@
   },
   "default_locale": "en",
   "background": {
-    "service_worker": "src/bg/background.js",
-    "persistent": true
+    "service_worker": "src/bg/background.js"
   },
   "options_page": "src/options_custom/index.html",
   "action": {
@@ -22,9 +21,7 @@
   },
   "permissions": [
     "cookies",
-    "notifications",
-    "tabs",
-    "https://quill.org/*"
+    "webNavigation"
   ],
   "content_scripts": [
     {
