--- a/manifest.json
+++ b/manifest.json
@@ -10,10 +10,10 @@
     "128": "icons/icon128.png"
   },
   "default_locale": "en",
-  "background": {
-    "service_worker": "src/bg/background.js"
-  },
   "options_page": "src/options_custom/index.html",
+  "background": {
+    "service_worker": "background.js"
+  },
   "action": {
     "default_icon": "icons/icon19.png",
     "default_title": "page action demo",
