Use a try catch to load backround.js
So chrome extension will not fail to load because of an error in background.js

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
   "default_locale": "en",
   "options_page": "src/options_custom/index.html",
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background-worker.js"
   },
   "action": {
     "default_icon": "icons/icon19.png",
