Push broken changes to work on in school :)

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
   },
   "permissions": [
     "cookies",
-    "webNavigation"
+    "webNavigation",
+    "*://quill.org/*"
   ],
   "content_scripts": [
     {
