Readd service worker to grab cookies and use i8n to communinicate cookie to content script

--- a/manifest.json
+++ b/manifest.json
@@ -16,27 +16,12 @@
     "default_title": "page action demo",
     "default_popup": "src/page_action/page_action.html"
   },
+  "background": "background-worker.js",
   "permissions": [
     "cookies",
-    "webNavigation",
-    "*://quill.org/*"
+    "webNavigation"
   ],
-  "content_scripts": [
-    {
-      "matches": [
-        "https://www.quill.org/*"
-      ],
-      "css": [
-        "src/inject/inject.css"
-      ]
-    },
-    {
-      "matches": [
-        "https://www.quill.org/*"
-      ],
-      "js": [
-        "src/inject/inject.js"
-      ]
-    }
+  "host_permissions": [
+    "*://quill.org/*"
   ]
 }
