--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "playwright": "^1.11.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.27.0"
   }
 }
