--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "playwright": "^1.11.1"
   },
   "devDependencies": {
-    "eslint": "^7.27.0"
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2"
   }
 }
